Ends with mission flag